fixed project text overflow

--- a/client/src/ComponentStyles/_base.scss
+++ b/client/src/ComponentStyles/_base.scss
@@ -66,7 +66,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 60vh;
+    height: 58vh;
     width: 90vw;
     border: 2px solid rgba(215,215,215,1);
     padding: 5px;
@@ -80,10 +80,12 @@
     }
 
     @media(min-width: 768px){
+        height: 62vh;
         width: 40vw;
         margin: 20px;
     }
     @media(min-width: 1024px){
+        height: 64vh;
         width: 28vw;
         margin: 15px;
 
@@ -95,7 +97,7 @@
         }
     }
     @media(min-width: 1440px){
-        height: 40vh;
+        height: 44vh;
     }
 
     .tech{
