--- a/client/src/Components/Landing/_landing.scss
+++ b/client/src/Components/Landing/_landing.scss
@@ -288,7 +288,7 @@
             .links {
                 display: flex;
                 flex-direction: row;
-
+                margin: 3px 0px 0px 0px;
                 li {
                     margin-left: 25px;
 
@@ -302,7 +302,7 @@
                 display: flex;
                 flex-direction: row;
                 width: 100%;
-                margin-top: 5px;
+                // margin-top: 5px;
                 margin-left: 10px;
                 margin-right: 10px;
                 margin-bottom: 5px;
@@ -401,6 +401,11 @@
             }
 
             .projects-container {
+                .links {
+                    margin-top: 1px;
+                    margin-bottom: 3px;
+                    font-size: 1.2em;
+                }
                 .tech-container {
                     h4 {
                         font-size: 1.2em;
@@ -413,3 +418,4 @@
         }
     }
 }
+
